[package]
name = "eru"
version = "0.1.0"
authors = ["Jan Růžička <jan.ruzicka01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced", rev = "12c0c18d662d2b817b559b94c71d18e122c76990", features = ["image"] }
iced_aw = { git = "https://github.com/Kaiden42/iced_aw", rev = "24a309939a2750cb40e7306d82f438236f45d219" }

take_mut = "0.2"

ron = "0.6"
serde = "1"

num = "0.3"
colorsys = "0.6"
itertools = "0.10"

tracing_vec = "0.1"
