[package]
name = "eru"
version = "0.1.0"
authors = ["Jan Růžička <jan.ruzicka01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced", rev = "a5fddf9ee648927b294ef34e8819855d5e117b26", features = ["image", "tokio"] }
iced_native = { git = "https://github.com/hecrj/iced", rev = "a5fddf9ee648927b294ef34e8819855d5e117b26" }

iced_aw = { path = "../../Libs/iced_aw" }
# iced_aw = { git = "https://github.com/Kaiden42/iced_aw", rev = "84ccfa88055691ea299eb1cd0e1ba8b2342fdc91" }

take_mut = "0.2"

ron = "0.6"
serde = "1"

num = "0.3"
colorsys = "0.6"
itertools = "0.10"

tracing_vec = { path = "../../Libs/tracing_vec" }
