[package]
name = "eru"
version = "0.1.0"
authors = ["Jan Růžička <jan.ruzicka01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { path = "../../Libs/iced", features = ["image", "tokio", "svg"] }
iced_native = { path = "../../Libs/iced/native" }

take_mut = "0.2"

ron = "0.6"

serde_json = "1"
serde = { version = "1", features = ["derive"] }

num = "0.3"
colorsys = "0.6"
itertools = "0.10"

tracing_vec = "0.1"
